--- a/TAL/TP3.ipynb
+++ b/TAL/TP3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import os\n",
     "from tqdm import tqdm\n",
     "import spacy\n",
-    "from spacy.tokens import DocBin"
+    "from spacy.tokens import DocBin\n",
+    "from spacy.training.example import Example\n"
    ]
   },
   {
@@ -22,43 +23,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
     "TRAIN_DATA = [\n",
-    "    (\"USTHB is the biggest university in algeria.\",{'entities': [(0, 5, 'ORG')]}),\n",
-    "    (\"algiers has many universities on of them is USTHB\",{'entities': [(43, 49, 'ORG')]}),\n",
-    "    (\"LRIA is a research laboratory in the IT faculty at USTHB specialized in AI.\",{'entities': [(0, 4, \"ORG\")]}),\n",
-    "    (\"LRIA was founded in 2000\",{'entities': [(0, 4, \"ORG\")]})\n",
-    "    ]"
+    "    (\"The sky is blue\", {\"entities\": [(11, 15, \"COLOR\")]}),\n",
+    "    (\"She wore a red dress\", {\"entities\": [(11, 14, \"COLOR\")]}),\n",
+    "    (\"The car is painted in green\", {\"entities\": [(22, 27, \"COLOR\")]}),\n",
+    "    (\"The sunsets are often orange\", {\"entities\": [(22, 28, \"COLOR\")]}),\n",
+    "    (\"The flag is red, white, and blue\", {\"entities\": [(12, 15, \"COLOR\"), (17, 22, \"COLOR\"), (28, 32, \"COLOR\")]}),\n",
+    "    (\"The room was painted in shades of gray\", {\"entities\": [(34, 38, \"COLOR\")]}),\n",
+    "    (\"The sky can be beautifully pink during sunsets\", {\"entities\": [(27, 31, \"COLOR\")]}),\n",
+    "    (\"The leaves turn yellow in the fall\", {\"entities\": [(16, 22, \"COLOR\")]}),\n",
+    "]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training a pos tagger\n",
+    "# Training a NER tagger\n",
     "\n",
     "train a pos tagger to recognize a new entity “USTHB” and “LRIA” as ORG,  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:00<00:00, 2039.78it/s]\n"
+      "100%|██████████| 8/8 [00:00<00:00, 2666.65it/s]\n"
      ]
     }
    ],
    "source": [
     "#nlp = spacy.blank(\"en\") # load a new spacy model\n",
-    "nlp = spacy.load(\"en_core_web_sm\") # load other spacy model\n",
+    "nlp = spacy.blank(\"en\") # load other spacy model\n",
     "\n",
     "db = DocBin() # create a DocBin object\n",
     "\n",
@@ -69,6 +74,7 @@
     "        span = doc.char_span(start, end, label=label, alignment_mode=\"contract\")\n",
     "\n",
     "        if span is None:\n",
+    "            print(text)\n",
     "            print(\"Skipping entity\")\n",
     "        else:\n",
     "            ents.append(span)\n",
@@ -80,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +95,7 @@
        "0"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,16 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,25 +127,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "testing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "USTHB -> ORG\n",
-      "LRIA -> ORG\n",
-      "USTHB -> ORG\n"
+      "blue -> COLOR\n",
+      "red -> COLOR\n",
+      "gray -> COLOR\n",
+      "white -> COLOR\n"
      ]
     }
    ],
    "source": [
     "nlp = spacy.load(\"./output/model-best\")\n",
     "\n",
-    "doc = nlp(\"USTHB is the biggest university in algeria. and LRIA is an AI research laboratory at USTHB\")\n",
+    "doc = nlp(\"the blue carpet is beautifully shinning\")\n",
+    "for ent in doc.ents:\n",
+    "    print(ent.text,\"->\", ent.label_)\n",
     "\n",
+    "doc = nlp(\"the color of the sky was red because of the flames\")\n",
+    "for ent in doc.ents:\n",
+    "    print(ent.text,\"->\", ent.label_)\n",
+    "\n",
+    "doc = nlp(\"that rooms walls were painted in half gray and half white\")\n",
     "for ent in doc.ents:\n",
     "    print(ent.text,\"->\", ent.label_)"
    ]
@@ -148,9 +169,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training a ner Tagger\n",
+    "# Training a POS Tagger\n",
     "\n",
     " ner tagger to recognize a new entity label called “COLOR”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from pathlib import Path\n",
+    "from spacy.pipeline.ner import Config\n",
+    "\n",
+    "TAG_MAP = {\n",
+    "    'ORG': {'pos': 'ORG'},\n",
+    "    '.': {'pos': 'any'}\n",
+    "}\n",
+    "\n",
+    "TRAIN_DATA = [\n",
+    "    (\"USTHB is the biggest university in algiers .\", {'tags': ['ORG', '.', '.', '.', '.', '.', '.', '.']}),\n",
+    "]\n",
+    "\n",
+    "nlp = spacy.blank(\"en\")\n",
+    "# Create a new NER component\n",
+    "tagger = nlp.add_pipe(\"tagger\")\n",
+    "\n",
+    "for tag, values in TAG_MAP.items():\n",
+    "    tagger.add_label(tag)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tags [('the', '.', ''), ('LRIA', '.', ''), ('is', '.', ''), ('a', '.', ''), ('research', '.', ''), ('laboratory', '.', ''), ('in', '.', ''), ('the', '.', ''), ('IT', '.', ''), ('faculty', '.', ''), ('at', '.', ''), ('USTHB', 'ORG', ''), ('specialized', '.', ''), ('in', '.', ''), ('AI', '.', ''), ('.', '.', '')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "optimizer = nlp.begin_training()\n",
+    "examples = []\n",
+    "\n",
+    "for input_data, annot in TRAIN_DATA:\n",
+    "    doc = nlp.make_doc(input_data)\n",
+    "    example = Example.from_dict(doc, annot)\n",
+    "    examples.append(example)\n",
+    "\n",
+    "for i in range(20):\n",
+    "    random.shuffle(examples)\n",
+    "    nlp.update(examples)\n",
+    "\n",
+    "doc = nlp(\"the LRIA is a research laboratory in the IT faculty at USTHB specialized in AI.\")\n",
+    "print('Tags', [(t.text, t.tag_, t.pos_) for t in doc])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getIndex(text,word_to_find):\n",
+    "    # Split the text into words\n",
+    "    words = text.split()\n",
+    "\n",
+    "    # Initialize a variable to store the start index\n",
+    "    start_index = None\n",
+    "\n",
+    "    # Iterate through the words and find the start index of the target word\n",
+    "    for i, word in enumerate(words):\n",
+    "        if word == word_to_find:\n",
+    "            start_index = sum(len(words[j]) + 1 for j in range(i))\n",
+    "            break\n",
+    "        \n",
+    "    return start_index"
    ]
   }
  ],
