--- a/TAL/TP3.ipynb
+++ b/TAL/TP3.ipynb
@@ -135,34 +135,361 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "blue -> COLOR\n",
-      "red -> COLOR\n",
-      "gray -> COLOR\n",
-      "white -> COLOR\n"
-     ]
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">The grass is \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    green\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       ".</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">the \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    blue\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       " carpet is beautifully shinning</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">The sky is \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    blue\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       ".</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">the color of the sky was \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    red\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       " because of the flames</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">that room walls were painted in half \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    gray\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       " and half \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    white\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       "</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">The sun is bright.</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "nlp = spacy.load(\"./output/model-best\")\n",
+    "TEST_DATA = [\n",
+    "    \"The grass is green.\",\n",
+    "    \"the blue carpet is beautifully shinning\",\n",
+    "    \"The sky is blue.\",\n",
+    "    \"the color of the sky was red because of the flames\",\n",
+    "    \"that room walls were painted in half gray and half white\",\n",
+    "    \"The sun is bright.\"\n",
+    "]\n",
     "\n",
-    "doc = nlp(\"the blue carpet is beautifully shinning\")\n",
-    "for ent in doc.ents:\n",
-    "    print(ent.text,\"->\", ent.label_)\n",
+    "for text in TEST_DATA:\n",
+    "        doc = nlp(text)\n",
+    "        spacy.displacy.render(doc, style=\"ent\", jupyter=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# old training method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from pathlib import Path\n",
+    "import spacy\n",
+    "from spacy.training.example import Example\n",
     "\n",
-    "doc = nlp(\"the color of the sky was red because of the flames\")\n",
-    "for ent in doc.ents:\n",
-    "    print(ent.text,\"->\", ent.label_)\n",
     "\n",
-    "doc = nlp(\"that rooms walls were painted in half gray and half white\")\n",
-    "for ent in doc.ents:\n",
-    "    print(ent.text,\"->\", ent.label_)"
+    "TRAIN_DATA = [\n",
+    "    (\"The sky is blue\", {\"entities\": [(11, 15, \"COLOR\")]}),\n",
+    "    (\"She wore a red dress\", {\"entities\": [(11, 14, \"COLOR\")]}),\n",
+    "    (\"The car is painted in green\", {\"entities\": [(22, 27, \"COLOR\")]}),\n",
+    "    (\"The sunsets are often orange\", {\"entities\": [(22, 28, \"COLOR\")]}),\n",
+    "    (\"The flag is red, white, and blue\", {\"entities\": [(12, 15, \"COLOR\"), (17, 22, \"COLOR\"), (28, 32, \"COLOR\")]}),\n",
+    "    (\"The room was painted in shades of gray\", {\"entities\": [(34, 38, \"COLOR\")]}),\n",
+    "    (\"The sky can be beautifully pink during sunsets\", {\"entities\": [(27, 31, \"COLOR\")]}),\n",
+    "    (\"The leaves turn yellow in the fall\", {\"entities\": [(16, 22, \"COLOR\")]}),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.blank('en')\n",
+    "\n",
+    "ner = nlp.add_pipe('ner')\n",
+    "\n",
+    "for _, annotations in TRAIN_DATA:\n",
+    "    for ent in annotations.get('entities'):\n",
+    "            ner.add_label(ent[2])\n",
+    "\n",
+    "other_pipes = [pipe for pipe in nlp.pipe_names if pipe != 'ner']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "examples = []\n",
+    "for input_data, annot in TRAIN_DATA:\n",
+    "    doc = nlp.make_doc(input_data)\n",
+    "    example = Example.from_dict(doc, annot)\n",
+    "    examples.append(example)\n",
+    "\n",
+    "with nlp.disable_pipes(*other_pipes):  # only train NER\n",
+    "    optimizer = nlp.begin_training()\n",
+    "    for itn in range(20):\n",
+    "        random.shuffle(examples)\n",
+    "        losses = {}\n",
+    "        for example in examples:\n",
+    "            nlp.update(\n",
+    "                [example],\n",
+    "                drop=0.5, # dropout-make it harder to memorise data\n",
+    "                sgd=optimizer, # callable to update weights\n",
+    "                losses=losses)\n",
+    "\n",
+    "nlp.to_disk(\"./model_ner_old\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">The sky is \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    blue\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       "</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">She wore a \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    red\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       " dress</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">The car is painted in \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    green\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       "</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">The sunsets are often \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    orange\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       "</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">The flag is \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    red\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       ", \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    white\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       ", and \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    blue\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       "</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">The room was painted in shades of \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    gray\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       "</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">The sky can be beautifully \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    pink\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       " during sunsets</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">The leaves turn \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    yellow\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">COLOR</span>\n",
+       "</mark>\n",
+       " in the fall</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nlp = spacy.load(\"./model_ner_old\")\n",
+    "for text, _ in TRAIN_DATA:\n",
+    "        doc = nlp(text)\n",
+    "        spacy.displacy.render(doc, style=\"ent\", jupyter=True)"
    ]
   },
   {
@@ -176,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,17 +513,19 @@
     "\n",
     "TAG_MAP = {\n",
     "    'ORG': {'pos': 'ORG'},\n",
-    "    '.': {'pos': 'any'}\n",
+    "    'any': {'pos': 'any'}\n",
     "}\n",
     "\n",
     "TRAIN_DATA = [\n",
-    "    (\"USTHB is the biggest university in algiers .\", {'tags': ['ORG', '.', '.', '.', '.', '.', '.', '.']}),\n",
+    "    (\"USTHB is the biggest university in algiers\", {'tags': ['ORG', 'any', 'any', 'any', 'any', 'any', 'any']}),\n",
+    "    (\"LRIA is a research laboratory in USTHB\", {'tags': ['ORG', 'any', 'any', 'any', 'any', 'any', 'ORG']}),\n",
     "]\n",
     "\n",
     "nlp = spacy.blank(\"en\")\n",
     "# Create a new NER component\n",
     "tagger = nlp.add_pipe(\"tagger\")\n",
     "\n",
+    "# Add the labels to the tagger\n",
     "for tag, values in TAG_MAP.items():\n",
     "    tagger.add_label(tag)\n",
     "\n"
@@ -204,19 +533,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tags [('the', '.', ''), ('LRIA', '.', ''), ('is', '.', ''), ('a', '.', ''), ('research', '.', ''), ('laboratory', '.', ''), ('in', '.', ''), ('the', '.', ''), ('IT', '.', ''), ('faculty', '.', ''), ('at', '.', ''), ('USTHB', 'ORG', ''), ('specialized', '.', ''), ('in', '.', ''), ('AI', '.', ''), ('.', '.', '')]\n"
+      "Tags [('the', 'any', ''), ('LRIA', 'ORG', ''), ('is', 'any', ''), ('a', 'any', ''), ('research', 'any', ''), ('laboratory', 'any', ''), ('in', 'any', ''), ('the', 'any', ''), ('IT', 'any', ''), ('faculty', 'any', ''), ('at', 'any', ''), ('USTHB', 'ORG', ''), ('specialized', 'any', ''), ('in', 'any', ''), ('AI', 'any', ''), ('.', 'any', '')]\n"
      ]
     }
    ],
    "source": [
-    "optimizer = nlp.begin_training()\n",
+    "\n",
     "examples = []\n",
     "\n",
     "for input_data, annot in TRAIN_DATA:\n",
@@ -224,12 +553,49 @@
     "    example = Example.from_dict(doc, annot)\n",
     "    examples.append(example)\n",
     "\n",
-    "for i in range(20):\n",
+    "nlp.initialize(lambda: examples)\n",
+    "optimizer = nlp.begin_training()\n",
+    "\n",
+    "for i in range(50):\n",
     "    random.shuffle(examples)\n",
-    "    nlp.update(examples)\n",
+    "    for example in examples:\n",
+    "        nlp.update([example],sgd=optimizer,losses=losses)\n",
+    "    \n",
+    "nlp.to_disk(\"./model_post\")\n",
+    "\n",
     "\n",
     "doc = nlp(\"the LRIA is a research laboratory in the IT faculty at USTHB specialized in AI.\")\n",
-    "print('Tags', [(t.text, t.tag_, t.pos_) for t in doc])"
+    "print('Tags', [(t.text, t.tag_, t.pos_) for t in doc])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\APPS\\python\\lib\\site-packages\\spacy\\displacy\\__init__.py:213: UserWarning: [W006] No entities to visualize found in Doc object. If this is surprising to you, make sure the Doc was processed using a model that supports named entity recognition, and check the `doc.ents` property manually if necessary.\n",
+      "  warnings.warn(Warnings.W006)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">the LRIA is a research laboratory in the IT faculty at USTHB specialized in AI.</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "spacy.displacy.render(doc, style=\"ent\", jupyter=True)"
    ]
   },
   {
