--- a/TAL/TP3.ipynb
+++ b/TAL/TP3.ipynb
@@ -503,22 +503,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "from pathlib import Path\n",
     "from spacy.pipeline.ner import Config\n",
+    "import spacy\n",
+    "from spacy.training.example import Example\n",
     "\n",
     "TAG_MAP = {\n",
-    "    'ORG': {'pos': 'ORG'},\n",
+    "    'NNS': {'pos': 'NNS'},\n",
     "    'any': {'pos': 'any'}\n",
     "}\n",
     "\n",
     "TRAIN_DATA = [\n",
-    "    (\"USTHB is the biggest university in algiers\", {'tags': ['ORG', 'any', 'any', 'any', 'any', 'any', 'any']}),\n",
-    "    (\"LRIA is a research laboratory in USTHB\", {'tags': ['ORG', 'any', 'any', 'any', 'any', 'any', 'ORG']}),\n",
+    "    (\"there is many students in this class they'll pass student by student\", {'tags': ['any', 'any', 'any', 'NNS', 'any', 'any', 'any', 'any', 'any', 'any', 'any', 'any', 'any']}),\n",
+    "    (\"There are several books on the shelf and they'll read book by book\",{\"tags\": ['any', 'any', 'any', 'NNS', 'any', 'any', 'any', 'any', 'any', 'any', 'any', 'any', 'any', 'any']}),\n",
+    "    (\"There are many cats in the park\", {\"tags\": [\"any\", \"any\", \"any\", \"NNS\", \"any\", \"any\", \"any\"]}),\n",
+    "    (\"She has two dogs at home\", {\"tags\": [\"any\", \"any\", \"any\", \"NNS\", \"any\", \"any\"]}),\n",
+    "    (\"She has one dog at home\", {\"tags\": [\"any\", \"any\", \"any\", \"any\", \"any\", \"any\"]}),\n",
+    "    (\"there is a cat in the garden\", {\"tags\": [\"any\", \"any\", \"any\", \"any\", \"any\", \"any\", \"any\"]}),\n",
+    "    (\"There are multiple houses in the neighborhood\", {\"tags\": [\"any\", \"any\", \"any\", \"NNS\", \"any\", \"any\", \"any\"]}),\n",
+    "    (\"The kids play with colorful balls in the park\", {\"tags\": [\"any\", \"NNS\", \"any\", \"any\", \"any\", \"NNS\", \"any\", \"any\", \"any\"]}),\n",
+    "    (\"She has three cats and four dogs at home\", {\"tags\": [\"any\", \"any\", \"any\", \"NNS\", \"any\", \"any\", \"NNS\", \"any\", \"any\"]}),\n",
+    "    (\"We saw some birds in the sky\", {\"tags\": [\"any\", \"any\", \"any\", \"NNS\", \"any\", \"any\", \"any\"]}),\n",
+    "    (\"The students are studying for their exams\", {\"tags\": [\"any\", \"NNS\", \"any\", \"any\", \"any\", \"any\", \"NNS\"]}),\n",
+    "    (\"I counted the apples and there are twenty\", {\"tags\": [\"any\", \"any\", \"any\", \"NNS\", \"any\", \"any\", \"any\", \"any\"]}),\n",
+    "\n",
     "]\n",
     "\n",
     "nlp = spacy.blank(\"en\")\n",
@@ -533,17 +546,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tags [('the', 'any', ''), ('LRIA', 'ORG', ''), ('is', 'any', ''), ('a', 'any', ''), ('research', 'any', ''), ('laboratory', 'any', ''), ('in', 'any', ''), ('the', 'any', ''), ('IT', 'any', ''), ('faculty', 'any', ''), ('at', 'any', ''), ('USTHB', 'ORG', ''), ('specialized', 'any', ''), ('in', 'any', ''), ('AI', 'any', ''), ('.', 'any', '')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "examples = []\n",
@@ -557,45 +562,31 @@
     "optimizer = nlp.begin_training()\n",
     "\n",
     "for i in range(50):\n",
+    "    losses={}\n",
     "    random.shuffle(examples)\n",
     "    for example in examples:\n",
     "        nlp.update([example],sgd=optimizer,losses=losses)\n",
-    "    \n",
-    "nlp.to_disk(\"./model_post\")\n",
-    "\n",
-    "\n",
-    "doc = nlp(\"the LRIA is a research laboratory in the IT faculty at USTHB specialized in AI.\")\n",
-    "print('Tags', [(t.text, t.tag_, t.pos_) for t in doc])\n"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d:\\APPS\\python\\lib\\site-packages\\spacy\\displacy\\__init__.py:213: UserWarning: [W006] No entities to visualize found in Doc object. If this is surprising to you, make sure the Doc was processed using a model that supports named entity recognition, and check the `doc.ents` property manually if necessary.\n",
-      "  warnings.warn(Warnings.W006)\n"
+      "Tags [('there', 'any', ''), ('is', 'any', ''), ('many', 'any', ''), ('laboratories', 'NNS', '')]\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">the LRIA is a research laboratory in the IT faculty at USTHB specialized in AI.</div></span>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "spacy.displacy.render(doc, style=\"ent\", jupyter=True)"
+    "nlp.to_disk(\"./model_post\")\n",
+    "\n",
+    "doc = nlp(\"there is many laboratories\")\n",
+    "print('Tags', [(t.text, t.tag_, t.pos_) for t in doc])"
    ]
   },
   {
@@ -618,6 +609,73 @@
     "            break\n",
     "        \n",
     "    return start_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "[E143] Labels for component 'tagger' not initialized. This can be fixed by calling add_label, or by providing a representative batch of examples to the component's `initialize` method.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32md:\\_dev\\TP2\\TAL\\TP3.ipynb Cell 20\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/_dev/TP2/TAL/TP3.ipynb#X25sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m nlp\u001b[39m.\u001b[39madd_pipe(\u001b[39m\"\u001b[39m\u001b[39mtagger\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/_dev/TP2/TAL/TP3.ipynb#X25sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m# Train the POS tagger on the training data\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/_dev/TP2/TAL/TP3.ipynb#X25sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m nlp\u001b[39m.\u001b[39;49mbegin_training()\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/_dev/TP2/TAL/TP3.ipynb#X25sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39m# Create Example objects for each sentence in the training data\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/_dev/TP2/TAL/TP3.ipynb#X25sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m examples \u001b[39m=\u001b[39m []\n",
+      "File \u001b[1;32md:\\APPS\\python\\lib\\site-packages\\spacy\\language.py:1287\u001b[0m, in \u001b[0;36mLanguage.begin_training\u001b[1;34m(self, get_examples, sgd)\u001b[0m\n\u001b[0;32m   1280\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mbegin_training\u001b[39m(\n\u001b[0;32m   1281\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m   1282\u001b[0m     get_examples: Optional[Callable[[], Iterable[Example]]] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m   1283\u001b[0m     \u001b[39m*\u001b[39m,\n\u001b[0;32m   1284\u001b[0m     sgd: Optional[Optimizer] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m   1285\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Optimizer:\n\u001b[0;32m   1286\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(Warnings\u001b[39m.\u001b[39mW089, \u001b[39mDeprecationWarning\u001b[39;00m)\n\u001b[1;32m-> 1287\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49minitialize(get_examples, sgd\u001b[39m=\u001b[39;49msgd)\n",
+      "File \u001b[1;32md:\\APPS\\python\\lib\\site-packages\\spacy\\language.py:1349\u001b[0m, in \u001b[0;36mLanguage.initialize\u001b[1;34m(self, get_examples, sgd)\u001b[0m\n\u001b[0;32m   1345\u001b[0m         p_settings \u001b[39m=\u001b[39m I[\u001b[39m\"\u001b[39m\u001b[39mcomponents\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mget(name, {})\n\u001b[0;32m   1346\u001b[0m         p_settings \u001b[39m=\u001b[39m validate_init_settings(\n\u001b[0;32m   1347\u001b[0m             proc\u001b[39m.\u001b[39minitialize, p_settings, section\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcomponents\u001b[39m\u001b[39m\"\u001b[39m, name\u001b[39m=\u001b[39mname\n\u001b[0;32m   1348\u001b[0m         )\n\u001b[1;32m-> 1349\u001b[0m         proc\u001b[39m.\u001b[39minitialize(get_examples, nlp\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mp_settings)\n\u001b[0;32m   1350\u001b[0m pretrain_cfg \u001b[39m=\u001b[39m config\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mpretraining\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   1351\u001b[0m \u001b[39mif\u001b[39;00m pretrain_cfg:\n",
+      "File \u001b[1;32md:\\APPS\\python\\lib\\site-packages\\spacy\\pipeline\\tagger.pyx:299\u001b[0m, in \u001b[0;36mspacy.pipeline.tagger.Tagger.initialize\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32md:\\APPS\\python\\lib\\site-packages\\spacy\\pipeline\\pipe.pyx:121\u001b[0m, in \u001b[0;36mspacy.pipeline.pipe.Pipe._require_labels\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: [E143] Labels for component 'tagger' not initialized. This can be fixed by calling add_label, or by providing a representative batch of examples to the component's `initialize` method."
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from spacy.training.example import Example\n",
+    "\n",
+    "# Load a spaCy language model\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Create a blank spaCy model\n",
+    "nlp = spacy.blank(\"en\")\n",
+    "\n",
+    "# Define a training dataset with annotated plural nouns\n",
+    "train_data = [\n",
+    "    (\"There are many cats in the park.\", {\"tags\": [\"NNS\", \"VBP\", \"JJ\", \"IN\", \"DT\", \"NN\", \"IN\", \"DT\", \"NN\", \".\"]}),\n",
+    "    (\"She has two dogs at home.\", {\"tags\": [\"PRP\", \"VBZ\", \"CD\", \"NNS\", \"IN\", \"NN\", \".\"]}),\n",
+    "    # Add more examples here\n",
+    "]\n",
+    "\n",
+    "# Add the POS tagger to the pipeline\n",
+    "nlp.add_pipe(\"tagger\")\n",
+    "\n",
+    "# Train the POS tagger on the training data\n",
+    "nlp.begin_training()\n",
+    "\n",
+    "# Create Example objects for each sentence in the training data\n",
+    "examples = []\n",
+    "for text, annotations in train_data:\n",
+    "    doc = nlp.make_doc(text)\n",
+    "    example = Example.from_dict(doc, annotations)\n",
+    "    examples.append(example)\n",
+    "\n",
+    "# Update the model with the training data\n",
+    "for _ in range(10):  # You can adjust the number of iterations\n",
+    "    losses = {}\n",
+    "    nlp.update(examples, drop=0.5, losses=losses)\n",
+    "    print(losses)\n",
+    "\n",
+    "# Save the trained model\n",
+    "nlp.to_disk(\"trained_pos_tagger\")\n",
+    "\n",
+    "# Test the trained POS tagger on new text\n",
+    "text = \"They have several books on the shelf.\"\n",
+    "doc = nlp(text)\n",
+    "for token in doc:\n",
+    "    print(token.text, token.pos_)"
    ]
   }
  ],
