TP4 dm (not all functions) + TP4 tal (no data)

--- a/TAL/TP3.ipynb
+++ b/TAL/TP3.ipynb
@@ -290,9 +290,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'spacy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\_dev\\TP2\\TAL\\TP3.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/_dev/TP2/TAL/TP3.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m nlp \u001b[39m=\u001b[39m spacy\u001b[39m.\u001b[39mblank(\u001b[39m'\u001b[39m\u001b[39men\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/_dev/TP2/TAL/TP3.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m ner \u001b[39m=\u001b[39m nlp\u001b[39m.\u001b[39madd_pipe(\u001b[39m'\u001b[39m\u001b[39mner\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/_dev/TP2/TAL/TP3.ipynb#X14sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m _, annotations \u001b[39min\u001b[39;00m TRAIN_DATA:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'spacy' is not defined"
+     ]
+    }
+   ],
    "source": [
     "nlp = spacy.blank('en')\n",
     "\n",
