--- a/DM/TP4/TP4.ipynb
+++ b/DM/TP4/TP4.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
        "  ('sd', 'Nonprofits & Activism'): [18, 66]}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
        "  ('sd', 'Nonprofits & Activism'): 2}}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,6 +944,42 @@
     "    return cktemp\n",
     "supportck = support(ck)\n",
     "supportck"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def getSuppCond(sup1,sup2,search1,search2):\n",
+    "    top = 0\n",
+    "    bottom = 0\n",
+    "\n",
+    "    for key in sup1.keys():\n",
+    "        if search1 in sup1[key].keys():\n",
+    "            bottom = sup1[key][search1]\n",
+    "    for key in sup2.keys():\n",
+    "        if search2 in sup2[key].keys():\n",
+    "            top = sup2[key][search2]\n",
+    "    try:\n",
+    "        return top/bottom\n",
+    "    except:\n",
+    "        return 0\n",
+    "    \n",
+    "\n",
+    "getSuppCond(support(Ck(data,1)),support(Ck(data,2)),\"Jeff\",(\"Jeff\",25.0))"
    ]
   }
  ],
